# VALO-REST

./: .env.example  .gitignore  index.html  package-lock.json  package.json  test_insert.mjs  test_insert2.mjs  tsconfig.json  valo_pos_schema.sql  vite.config.ts  vite.config.ts.timestamp-1783102836447-bf464b87eaa0b.mjs
Docs/: ARCHITECTURE.md  BACKUP_DISASTER_RECOVERY.md  BUSINESS_WORKFLOWS.md  DATABASE.md  ENGINEERING_PRINCIPLES.md  PERFORMANCE.md  RBAC_ROLES.md  SECURITY.md  TECH_STACK.md  UI_DESIGN_SYSTEM.md
brain/5cc3c995-d275-46a2-ba22-bc3e3b4b14ca/: walkthrough.md
prisma/: check_auth_schema.js  check_functions.js  check_tables.js  list_users.js  migrate.js  migrate_health_rpc.js  migrate_kds_roles.js  schema.prisma  seed.js  seed.sql  seed_users.js  test_create_staff.js  test_login.mjs  test_signup.js  test_trigger.js  test_trigger_staff.js
public/: manifest.json  robots.txt  sitemap.xml  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/client/: App.tsx  index.css  main.tsx  sw-register.ts
src/client/__tests__/: RBAC.test.tsx
src/client/components/: ErrorBoundary.tsx  GoogleComingSoonModal.tsx  ImpersonationBanner.tsx  MessagingCenterDrawer.tsx  NotificationBell.tsx  NotificationCenterDrawer.tsx  UpgradeDialog.tsx  ValoAiPanel.tsx
src/client/context/: AuthContext.tsx  TenantContext.tsx
src/client/lib/: export-restaurant-package.ts  export-utils.ts  icon-library.ts  restaurant-report-engine.ts  session-store.ts  toast-store.ts  validations.ts
src/config/: env.ts
src/lib/: supabase.ts
src/test/: setup.ts
(+78 files in other folders)
