[package]
name = "dhadhan-hub"
version = "1.0.0"
description = "Dhadhan Hub Restaurant Portal Desktop Application"
authors = ["Dhadhan Hub Team <support@valootech.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
